fix: remove extra whitespace at top of homepage

--- a/src/PublicBundle/Resources/styles/pages/home.scss
+++ b/src/PublicBundle/Resources/styles/pages/home.scss
@@ -1,5 +1,8 @@
 .doc-home{
 	h1{
 		@extend %sro;
+		+ p{
+			margin-top: 0;
+		}
 	}
 }
